--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,4 +61,4 @@ jobs:
       uses: actions/upload-artifact@v1
       with:
         name: csv2json_mskinventory
-        path: dist/csv2json_mskinventory
+        path: dist/csv2json_mskinventory.exe
