--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,29 +14,29 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-#  centos7:
-#    # The type of runner that the job will run on
-#    runs-on: ubuntu-latest
-#
-#    # Steps represent a sequence of tasks that will be executed as part of the job
-#    steps:
-#    - uses: actions/checkout@v1
-#    - name: Set up Python 3.8
-#      uses: actions/setup-python@v1
-#      with:
-#        python-version: 3.8
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install pyinstaller
-#    - name: build with pyinstaller
-#      run: |
-#        pyinstaller csv2json_mskinventory.py
-#    - name: Upload centos 7
-#      uses: actions/upload-artifact@v1
-#      with:
-#        name: csv2json_mskinventory
-#        path: dist/csv2json_mskinventory
+  centos7:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+    - name: build with pyinstaller
+      run: |
+        pyinstaller csv2json_mskinventory.py
+    - name: Upload centos 7
+      uses: actions/upload-artifact@v1
+      with:
+        name: csv2json_mskinventory_linux
+        path: dist/csv2json_mskinventory
 
   # This workflow contains a single job called "build"
   windows:
@@ -57,12 +57,32 @@ jobs:
     - name: build with pyinstaller
       run: |
         pyinstaller csv2json_mskinventory.py
-    - name: Dir
-      run: |
-        pwd
-        dir
     - name: Upload centos 7
       uses: actions/upload-artifact@v1
       with:
-        name: csv2json_mskinventory
+        name: csv2json_mskinventory_win
         path: dist\csv2json_mskinventory\csv2json_mskinventory.exe
+
+  osx:
+    # The type of runner that the job will run on
+    runs-on: macos-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+    - name: build with pyinstaller
+      run: |
+        pyinstaller csv2json_mskinventory.py
+    - name: Upload centos 7
+      uses: actions/upload-artifact@v1
+      with:
+        name: csv2json_mskinventory_osx
+        path: dist/csv2json_mskinventory
