--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         pip install pyinstaller
     - name: build with pyinstaller
       run: |
-        pyinstaller csv2json_mskinventory.py
+        pyinstaller csv2json_mskinventory.py --onefile
     - name: Upload centos 7
       uses: actions/upload-artifact@v1
       with:
@@ -56,7 +56,7 @@ jobs:
         pip install pyinstaller
     - name: build with pyinstaller
       run: |
-        pyinstaller csv2json_mskinventory.py
+        pyinstaller csv2json_mskinventory.py --onefile
     - name: Upload centos 7
       uses: actions/upload-artifact@v1
       with:
@@ -80,7 +80,7 @@ jobs:
         pip install pyinstaller
     - name: build with pyinstaller
       run: |
-        pyinstaller csv2json_mskinventory.py
+        pyinstaller csv2json_mskinventory.py --onefile
     - name: Upload centos 7
       uses: actions/upload-artifact@v1
       with:
